@@ -1,11 +1,3 @@
 # Ping-Pong
 
 A simple JavaFX Ping-Pong game. This repository is mainly a test for Java code.
-
-## Use (MacOS)
-
-1.) Download PingPong.java
-
-2.) In Terminal, run --> javac --module-path /path/to/javafx/lib --add-modules javafx-controls PingPong.java
-
-3.) Then, run --> java --module-path /path/to/javafx/lib --add-modules javafx-controls PingPong
